<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="java.util.ArrayList"/>
        <import type="com.example.db.entities.CurrencyInfo"/>
        <variable name="currencies" type="ArrayList&lt;CurrencyInfo&gt;" />
    </data>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</layout>
